Opkuisen test-bestanden

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>test</title>
+<title>Immalle TOOLS</title>
 </head>
 <body>
-Dit is een test!!!
+    <h1>Tools</h1>
 </body>
 </html>
