--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 </head>
 <body>
     <h1>Tools</h1>
+    <ul>
+        <li><a href="AccountNaamGenerator/index.html">Account-naam generator</a></li>
+    </ul>
 </body>
 </html>
