Removed AccountNaamGenerator submodule (GitHub supports other pages now) and add link to ReactAlphabetTrainer

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <ul>
         <li><a href="AccountNaamGenerator/index.html">Account-naam generator</a></li>
     </ul>
+    <h1>Demo's</h1>
+    <ul>
+	<li><a href="ReactAlphabetTrainer/">React Alphabet Trainer</a></li>
+    </ul>
 </body>
 </html>
