--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
     <h1>Tools</h1>
     <ul>
-        <li><a href="https://michield-immalle.github.io/GIP_Website/">Michiel</a></li>
+        <li><a href="AccountNaamGenerator/index.html">Account-naam generator</a></li>
     </ul>
     <h1>Demo's</h1>
     <ul>
-	<li><a href="https://github.com/michield-immalle/GIP_Website/">Repo</a></li>
+	<li><a href="ReactAlphabetTrainer/">React Alphabet Trainer</a></li>
     </ul>
 </body>
 </html>
